--- a/.github/workflows/GenerateSnake.yml
+++ b/.github/workflows/GenerateSnake.yml
@@ -1,28 +1,40 @@
-name: Generate Snake
+name: generate animation
 
 on:
+  # run automatically every 12 hours
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 2 * * *"
+
+  # allows to manually run the job at any time
   workflow_dispatch:
 
+  # run on every push on the main branch
+  push:
+    branches:
+      - main
+
+
+
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.4
-
-      - name: Generate Snake
-        uses: Platane/snk@master
-        id: snake-gif
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          gif_out_path: ./assets/github-contribution-grid-snake.gif
-          svg_out_path: ./assets/github-contribution-grid-snake.svg
-
-      - name: Push to GitHub
-        uses: EndBug/add-and-commit@v7.2.1
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v4
         with:
-          branch: main
-          message: 'Generate Contribution Snake'
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}      
